# wallabot

./: LICENSE  README.md  chat_simulation.py  chatbot.py  example.env  fuzzy_logic.ipynb  fuzzy_utils.py  main.py  pyproject.toml  utils.py
